<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_google_signin_btn_icon_dark"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="edu.cornell.yh742.cs5450lab4.MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170sp"
        android:textAlignment="center"
        android:text="@string/welcome_text"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/signin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_text"/>

        <Button
            android:id="@+id/guest_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guest_text"/>

        <Button
            android:id="@+id/signout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signout_txt"/>
    </LinearLayout>

</LinearLayout>
